fixed homepage button line height and social button on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -721,6 +721,8 @@ div.main-main {
     margin-left: 0px; }
   div.main-main .homepage-button {
     margin-bottom: 20px; }
+    div.main-main .homepage-button a {
+      line-height: 40px; }
   div.main-main .homepage-button p {
     margin: 0 0 5px 0;
     top: 50%;
@@ -1033,6 +1035,9 @@ footer ul.footer-list li {
 footer ul.footer-list li:first-child {
   font-size: 20px; }
 
+.mb13 {
+  margin-bottom: 12px; }
+
 @media screen and (min-width: 1024px) {
   h1 {
     font-size: 28px; }
@@ -1082,8 +1087,6 @@ footer ul.footer-list li:first-child {
     font-weight: 700; } }
 
 @media screen and (min-width: 1024px) {
-  .mb13 {
-    margin-bottom: 13px; }
   body {
     width: 87.91%; }
   .mob-menu {
