--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -969,6 +969,9 @@ div.main-main {
 
   .homepage-button {
     margin-bottom: 20px;
+    a {
+      line-height: 40px;
+    }
   }
 
   .homepage-button p {
